--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SewingWorkshop">
-        <activity android:name=".klients.KlientsActivity"></activity>
+        <activity android:name=".klients.EditActivity"></activity>
+        <activity android:name=".klients.KlientsActivity" />
         <activity android:name=".manual.RashodTkaneiActivity" />
         <activity android:name=".manual.FormuliActivity" />
         <activity android:name=".manual.MerkiActivity" />
