activity_edit filled

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SewingWorkshop">
-        <activity android:name=".klients.EditActivity"></activity>
-        <activity android:name=".klients.KlientsActivity" />
+        <activity android:name=".clients.EditActivity" />
+        <activity android:name=".clients.ClientsActivity" />
         <activity android:name=".manual.RashodTkaneiActivity" />
         <activity android:name=".manual.FormuliActivity" />
         <activity android:name=".manual.MerkiActivity" />
-        <activity android:name=".manual.MaidhrtjrtnrjnActivity" />
         <activity android:name=".manual.DefektiActivity" />
         <activity android:name=".manual.PribavkiActivity" />
         <activity android:name=".manual.ManualActivity" />
